disable sni host check per default
Signed-off-by: Olivier Lamy <olamy@apache.org>